--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,6 @@
     "windwalker/renderer": "3.*"
   },
   "require-dev": {
-    "phpunit/phpunit": "^4.8"
+    "phpunit/phpunit": "^4.8|^5.0|^6.0|^7.0|^8.0|^9.0"
   }
 }
